# sub-sync

./: .gitignore  LICENSE  README.md  pyproject.toml  readme.md
src/: subsync.py
subsync/: main.py  subsync.py
