[build-system]
requires = ["setuptools>=68.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sub-sync"
version = "v1.1"
description = "Setting of subrip time offsets via the CLI"
readme = "README.md"
authors = [{ name = "tainn" }]
keywords = ["sub", "sync", "offset"]
dependencies = []
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["black", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/tainn/sub-sync"

[project.scripts]
subsync = "subsync:main"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
src = ["src"]
select = ["I001", "F401"]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
strict = true
exclude = ["build"]

[[tool.mypy.overrides]]
module = ["setuptools"]
ignore_missing_imports = true
