[build-system]
requires = ["setuptools>=69.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sub-sync"
version = "0.1.3"
readme = "readme.md"
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[project.urls]
homepage = "https://github.com/tainn/sub-sync"

[project.scripts]
subsync = "subsync:main"

[tool.ruff]
fix = true
indent-width = 4
line-length = 120
src = ["subsync"]

[tool.ruff.lint]
select = [
    "I001",
    "F401"
]

[tool.ruff.lint.isort]
known-first-party = ["subsync"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.mypy]
strict = true
disable_error_code = [
    "no-any-return",
    "func-returns-value"
]
exclude = ["venv", "build"]

[[tool.mypy.overrides]]
module = ["setuptools"]
ignore_missing_imports = true
